# pottery-cms

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  compose.local.yml  makefile  manage.py  package-lock.json  package.json  pyproject.toml
.environments/.local/: .base.env  .dbms.env
.makefiles/: base.mk  compose.mk
config/: urls.py
config/settings/: _dbms.py  _env_parse.py  base.py  local.py
docker/local/: instance.dockerfile  node.dockerfile
locale/ru/LC_MESSAGES/: django.po
pottery/account/: apps.py  exceptions.py  forms.py  models.py  urls.py  views.py
pottery/account/migrations/: 0001_initial.py  0002_user_email.py  0003_user_photo.py  0004_alter_user_photo.py
pottery/core/: adapters.py  apps.py  exceptions.py  models.py  protocols.py  providers.py  urls.py  views.py
pottery/core/management/commands/: merge_dotenv.py
pottery/master_class/: admin.py  apps.py  choices.py  models.py
pottery/master_class/migrations/: 0001_initial.py  0002_alter_photo_path.py
pottery/organization/: admin.py  apps.py  models.py
pottery/organization/migrations/: 0001_initial.py
pottery/static/css/: core.css  core.min.css
pottery/templates/: base.html
pottery/templates/include/body/: _footer.html  _logo.html  _main.html  _navbar.html  _navbar_logo.html  _sidebar.html  _static.html
pottery/templates/include/head/: _fonts.html  _main.html  _meta.html  _static.html
pottery/templates/pages/: login.html
webpack/: common.config.js  dev.config.js
